content and styles, home, about, venue

--- a/source/html/static/venue.html
+++ b/source/html/static/venue.html
@@ -32,39 +32,33 @@
             </ul>
       	</div>
         </div>
-        
-    	<div class="row white-background">
-       <div class="col-xs-12 col-md-8">
-        <h1>Venue</h1>
-        </div>
-       </div>
+         <div class="row white-background">
+         <div class="padded-header">
+         <div class="col-xs-4 col-sm-4 col-md-4">
+         <img src="http://placehold.it/930x940" class="img-responsive"> 
+         </div>
+         <div class="col-xs-4 col-sm-4 col-md-4">
+         <img src="http://placehold.it/930x940" class="img-responsive"> 
+         </div>
+         <div class="col-xs-4 col-sm-4 col-md-4">
+         <img src="http://placehold.it/930x940" class="img-responsive"> 
+         </div>
+         </div>
+         </div>
+ 
        <div class="row white-background">
-        	<div class="col-xs-12 col-md-6">
-            
-            <p>
-            April 18-19 2013: Cape Town, South Africa.
-            </p>
-			<p>
-			Scaling code and architecture is a unique challenge that pushes us to our limits.
-			</p>
-            <p>
-ScaleConf brings international and local experts together to talk about their experience building sites and services that can handle the rigours of today's internet.
-            </p>
+        	<div class="col-xs-12 col-sm-6 col-md-6">
+            <h1>Kirstenbosch Gardens, Cape Town</h1>
+<p>
+Set against the eastern slopes of Table Mountain, Kirstenbosch National Botanical Gardens was established nearly 100 years ago to conserve and promote the diverse indigenous flora of South Africa.
+</p>
+<p>
+Kirstenbosch covers 26 hectares, and falls within the Cape Floristic Region, declared a UNESCO World Heritage Site in 2004. With over 7 000 plant species, interspersed with rolling green lawns, the Garden makes for a beautiful and relaxed setting, just 15 minutes from Cape Town's CBD.
+   </p>         
             </div>
-            <div class="col-xs-12 col-md-6">
-            <h2>Speaker Names</h2>
-                Beat Schwegler
-                Dale Humby
-                Daniel Fiske
-                Daniel Schauenberg
-                David Tinker
-                Mike Jones
-                Miles Ward
-                Neil Blakey-Milner
-                Patrick Turley
-                Peter Lockhart
-                Robert Stuttaford
-                Simon Ratcliffe
+            <div class="col-xs-12 col-sm-6 col-md-6 right-column-nobg">
+            <h2 class="map">Southern Suburbs, Cape Town 7800</h2>
+               <iframe width="100%" height="350px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.za/maps/ms?msa=0&amp;msid=201774622634815639584.0004b2de6eb834c4b6b9d&amp;ie=UTF8&amp;t=m&amp;vpsrc=6&amp;ll=-33.95703,18.426132&amp;spn=0.19934,0.291824&amp;z=11&amp;output=embed"></iframe><br /><p><small>View <a target='_blank' href="http://maps.google.co.za/maps/ms?msa=0&amp;msid=201774622634815639584.0004b2de6eb834c4b6b9d&amp;ie=UTF8&amp;t=m&amp;vpsrc=6&amp;ll=-33.95703,18.426132&amp;spn=0.19934,0.291824&amp;z=11&amp;source=embed" style="color:#0000FF;text-align:left">Kirstenbosch</a> in a larger map</small></p>
             </div>
         </div>
 		<div class="row footer">
