--- a/source/html/static/speaker.html
+++ b/source/html/static/speaker.html
@@ -42,7 +42,11 @@
 			<div class="col-xs-12 col-md-4">
             <ul class="list-inline">
             <li class="box">
-            content
+            <h3 class="speaker">Beat Schwegler</h3>
+Microsoft<br />
+Director, Platform Strategy Group
+
+
             </li>
             <li class="box">
             content
