--- a/source/html/static/about.html
+++ b/source/html/static/about.html
@@ -10,9 +10,8 @@
 
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <p class="navbar-text"><h4>Buy Tickets top nav bar</h4></p>
-        </div>
+        <div class="container center-text">
+                        <p class="navbar-text"><strong>Tickets will go on sale in early December 2013.</strong> <br />Keep an eye on @scaleconf for announcements.</p></div>
     </div>
     
 	<div class="container padded">
@@ -27,8 +26,9 @@
               <li><a href="schedule.html">Schedule</a></li>
               <li><a href="#">Workshops</a></li>
               <li><a href="venue.html">Venue</a></li>
-              <li><a href="#">Sponsors</a></li>
+              <li><a href="sponsors.html">Sponsors</a></li>
               <li class="active"><a href="about.html">About</a></li>
+              <li><a href="videos.html">Videos</a></li>
             </ul>
       	</div>
         </div>
