--- a/source/html/static/about.html
+++ b/source/html/static/about.html
@@ -24,7 +24,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="speaker.html">Speakers</a></li>
               <li><a href="schedule.html">Schedule</a></li>
-              <li><a href="#">Workshops</a></li>
+              <li><a href="workshops.html">Workshops</a></li>
               <li><a href="venue.html">Venue</a></li>
               <li><a href="sponsors.html">Sponsors</a></li>
               <li class="active"><a href="about.html">About</a></li>
